# FlameEffect

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/flame/effect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FlameRenderer.cpp  FlameRenderer.h  compute.frag
app/src/main/java/flame/effect/: FlameEffect.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/flame/effect/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
